[package]
name = "sensitive-data"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Marcus Ofenhed"]
categories = ["memory-management", "rust-patterns"]
keywords = ["mprotect", "mlock"]
repository = "https://github.com/Ofenhed/sensitive-data/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["memoryapi", "sysinfoapi", "impl-default"]}
